@@ -8,4 +8,4 @@
 
 #cmakedefine HAVE_NO_STDINT_H 
 
-
+#cmakedefine GDCM_DEBUG
